--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ xgboost==2.0.3
 streamlit-authenticator==0.3.3  # Pour l'authentification (voir plus bas)
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
+Authlib>=1.3.2
